--- a/style.css
+++ b/style.css
@@ -80,3 +80,8 @@ form button[type="submit"] {
 form button[type="submit"]:hover {
   background-color: #555;
 }
+
+.fa-facebook {
+    color: green;
+  }
+  
