--- a/style.css
+++ b/style.css
@@ -81,7 +81,21 @@ form button[type="submit"]:hover {
   background-color: #555;
 }
 
-.fa-facebook {
-    color: green;
+.social-icons {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
   }
+  
+  .social-icons a {
+    display: inline-block;
+    margin: 0 10px;
+    color: #333;
+    font-size: 24px;
+  }
+  
+  .social-icons a:hover {
+    color: #555;
+  }
+  
   
